🐛 fix: temporary fixed Mtabs flicker

--- a/SwashbucklerDiary/wwwroot/css/extend/masa-blazor-extend.css
+++ b/SwashbucklerDiary/wwwroot/css/extend/masa-blazor-extend.css
@@ -138,3 +138,7 @@
     padding: 16px 24px 10px;
 }
 
+.m-slide-group__wrapper{
+    flex:unset !important;
+}
+
